Fix: issue with description overflow

--- a/src/components/BookDetail/bookDetails.scss
+++ b/src/components/BookDetail/bookDetails.scss
@@ -43,8 +43,16 @@
   .info-container {
     height: 100%;
     overflow: hidden;
+
+    .book-title {
+      height: 5%;
+    }
+
+    .book-authors {
+      height: 5%;
+    }
     .book-description {
-      height: 100%;
+      height: 90%;
       overflow: scroll;
 
       &::-webkit-scrollbar {
@@ -95,7 +103,6 @@
         height: 40px;
         width: 100%;
 
-        // white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
       }
@@ -109,14 +116,6 @@
 
       .book-description {
         flex: 2;
-      }
-
-      h1 {
-        margin-top: 0;
-      }
-
-      h2 {
-        margin-top: 0;
       }
     }
 
